@@ -15,16 +15,23 @@
  */
 package org.springframework.sbm;
 
-import com.rabbitmq.client.*;
-import org.junit.jupiter.api.*;
+import com.rabbitmq.client.Channel;
+import com.rabbitmq.client.ConnectionFactory;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.sbm.mule.amqp.RabbitMqChannelBuilder;
+import org.springframework.sbm.mule.amqp.RabbitMqListener;
+import org.springframework.sbm.mule.wmq.WmqListener;
+import org.springframework.sbm.mule.wmq.WmqSender;
 import org.springframework.web.client.RestTemplate;
+import org.testcontainers.containers.Network;
 
+import javax.jms.JMSException;
 import java.io.IOException;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
@@ -35,7 +42,6 @@ public class BootifySimpleMuleAppIntegrationTest extends IntegrationTestBaseClas
 
     private static final String FIRST_QUEUE_NAME = "sbm-integration-queue-one";
     private static final String SECOND_QUEUE_NAME = "sbm-integration-queue-two";
-    private static final ConnectionFactory CONNECTION_FACTORY = new ConnectionFactory();
     private String messageContent;
     private final RestTemplate restTemplate = new RestTemplate();
 
@@ -53,7 +59,7 @@ public class BootifySimpleMuleAppIntegrationTest extends IntegrationTestBaseClas
 
     @Test
     @Tag("integration")
-    public void springIntegrationWorks() throws IOException, TimeoutException, InterruptedException {
+    public void springIntegrationWorks() throws IOException, TimeoutException, InterruptedException, JMSException {
         intializeTestProject();
         scanProject();
         applyRecipe("initialize-spring-boot-migration");
@@ -61,36 +67,68 @@ public class BootifySimpleMuleAppIntegrationTest extends IntegrationTestBaseClas
 
         executeMavenGoals(getTestDir(), "clean", "package", "spring-boot:build-image");
 
-        RunningNetworkedContainer rabbitContainer = startDockerContainers(
+        RunningNetworkedContainer rabbitMqContainer = startDockerContainer(
                 new NetworkedContainer(
                         "rabbitmq:3-management",
                         List.of(5672, 15672),
                         "amqphost"),
-                null);
+                null,
+                Collections.emptyMap());
+        int amqpPort = rabbitMqContainer.getContainer().getMappedPort(5672);
+        Channel ampqChannel = new RabbitMqChannelBuilder().initializeChannelAndQueues(amqpPort);
 
-        try (Connection connection = CONNECTION_FACTORY.newConnection(
-                Collections.singletonList(
-                        new Address("localhost", rabbitContainer.getContainer().getMappedPort(5672))
-                )); Channel channel = connection.createChannel()) {
-            channel.queueDeclare(FIRST_QUEUE_NAME, false, false, false, null);
+        RunningNetworkedContainer container = startDockerContainer(
+                new NetworkedContainer("hellomule-migrated:1.0-SNAPSHOT", List.of(9081), "spring"),
+                rabbitMqContainer.getNetwork(),
+                Collections.emptyMap());
 
-            channel.queueDeclare(SECOND_QUEUE_NAME, false, false, false, null);
-            String EXCHANGE = "sbm-integration-exchange";
-            channel.exchangeDeclare(EXCHANGE, "direct");
-            channel.queueBind(SECOND_QUEUE_NAME, EXCHANGE, SECOND_QUEUE_NAME);
+        checkSendHttpMessage(container.getContainer().getMappedPort(9081));
+        checkInboundGatewayHttpMessage(container.getContainer().getMappedPort(9081));
+        checkRabbitMqIntegration(ampqChannel);
+        checkWmqIntegration(rabbitMqContainer.getNetwork());
+    }
 
-            String message = "{\"msgContent\": \"" + messageContent + "\"}";
-            channel.basicPublish("", FIRST_QUEUE_NAME, null, message.getBytes());
-            System.out.println(" [x] Sent '" + message + "'");
+    private void checkRabbitMqIntegration(Channel amqpChannel)
+            throws IOException, InterruptedException {
 
-            RunningNetworkedContainer container = startDockerContainers(
-                    new NetworkedContainer("hellomule-migrated:1.0-SNAPSHOT", List.of(9081), "spring")
-                    , rabbitContainer.getNetwork());
+        String message = "{\"msgContent\": \"" + messageContent + "\"}";
+        amqpChannel.basicPublish("", FIRST_QUEUE_NAME, null, message.getBytes());
+        System.out.println(" [x] Sent amqp message: '" + message + "'");
 
-            checkReceivedMessage(channel, message);
-            checkSendHttpMessage(container.getContainer().getMappedPort(9081));
-            checkInboundGatewayHttpMessage(container.getContainer().getMappedPort(9081));
-        }
+        RabbitMqListener receiver = new RabbitMqListener(message, Map.of("TestProperty", "TestPropertyValue"));
+        amqpChannel.basicConsume(SECOND_QUEUE_NAME, true, receiver, consumerTag -> {
+        });
+        boolean latch = receiver.getLatch().await(10000, TimeUnit.MILLISECONDS);
+        assertThat(latch).isTrue();
+    }
+
+    private RunningNetworkedContainer startWmqContainer(Network rabbitContainerNetwork) {
+        Map<String, String> wmqMap = new HashMap<>();
+        wmqMap.put("LICENSE", "accept");
+        wmqMap.put("MQ_QMGR_NAME", "QM1");
+        wmqMap.put("MQ_APP_PASSWORD", "passw0rd");
+
+        return startDockerContainer(new NetworkedContainer("ibmcom/mq",
+                        List.of(1414, 9443),
+                        "wmqhost"
+                ),
+                rabbitContainerNetwork,
+                wmqMap);
+    }
+
+    private void checkWmqIntegration(Network rabbitMqNetwork) throws InterruptedException, JMSException {
+        RunningNetworkedContainer wmqContainer = startWmqContainer(rabbitMqNetwork);
+        WmqSender wmqSender = new WmqSender();
+        CountDownLatch latch = new CountDownLatch(1);
+        WmqListener wmqListener = new WmqListener();
+        int mappedPort = wmqContainer.getContainer().getMappedPort(1414);
+        wmqListener.listenForMessage(mappedPort, "DEV.QUEUE.2", message -> {
+            System.out.println(" [x] Received wmq message: '" + message + "'");
+            latch.countDown();
+        });
+        wmqSender.sendMessage(mappedPort, "DEV.QUEUE.1", "Test WMQ message");
+        boolean latchResult = latch.await(1000000, TimeUnit.MILLISECONDS);
+        assertThat(latchResult).isTrue();
     }
 
     private void checkInboundGatewayHttpMessage(int port) {
@@ -102,35 +140,5 @@ public class BootifySimpleMuleAppIntegrationTest extends IntegrationTestBaseClas
     private void checkSendHttpMessage(int port) {
         ResponseEntity<String> responseEntity = restTemplate.getForEntity("http://localhost:" + port + "/test", String.class);
         assertThat(responseEntity.getStatusCode()).isEqualTo(HttpStatus.OK);
-    }
-
-    private void checkReceivedMessage(Channel channel, String expectedMessage) throws IOException, InterruptedException {
-        Receiver receiver = new Receiver(expectedMessage);
-        channel.basicConsume(SECOND_QUEUE_NAME, true, receiver, consumerTag -> {
-        });
-        boolean latch = receiver.getLatch().await(10000, TimeUnit.MILLISECONDS);
-        assertThat(latch).isTrue();
-    }
-
-    public static class Receiver implements DeliverCallback {
-        private final String expectedMessage;
-        private final CountDownLatch latch = new CountDownLatch(1);
-
-        public Receiver(String expectedMessage) {
-            this.expectedMessage = expectedMessage;
-        }
-
-        public CountDownLatch getLatch() {
-            return latch;
-        }
-
-        @Override
-        public void handle(String s, Delivery delivery) throws IOException {
-            String receivedMessage = new String(delivery.getBody(), "UTF-8");
-            System.out.println(" [x] Received '" + receivedMessage + "'");
-            if (receivedMessage.equals(expectedMessage)) {
-                latch.countDown();
-            }
-        }
     }
 }
